--- a/com.danielk.ui/pom.xml
+++ b/com.danielk.ui/pom.xml
@@ -20,7 +20,6 @@
 
     <dependencies>
 
-
         <dependency>
             <artifactId>MusicDatabase-common</artifactId>
             <version>1.0-SNAPSHOT</version>
@@ -37,6 +36,20 @@
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
             <version>${javafx-controls.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.11.1</version>
+
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.11.1</version>
+
         </dependency>
 
     </dependencies>
